# GifSmith

./: .gitattributes  .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  progress.txt
.github/workflows/: ci.yml  release.yml
scripts/: build-ffmpeg-macos.sh  fetch-ffmpeg.sh  fetch-ytdlp.sh
src/: App.css  App.tsx  constants.ts  fonts.css  format.ts  index.tsx  ipc.ts  playback.ts  settings.ts  source.ts  state.ts  tokens.css  update.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/binaries/: .gitkeep
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  encoder.rs  lib.rs  main.rs  probe.rs
src/components/: CropOverlay.tsx  DropZone.tsx  ExportPanel.tsx  Gallery.tsx  Logo.tsx  PreviewModal.tsx  SettingsPanel.tsx  Timeline.tsx  VideoPlayer.tsx
