[package]
name = "gifsmith"
version = "1.0.1"
description = "Turn a slice of video into a high-quality animated GIF."
authors = ["Chafic Charafeddine"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gifsmith_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
gifski = { version = "1.34", default-features = false }
imgref = "1"
rgb = "0.8"
base64 = "0.22"
# Direct-media-URL download path. native-tls uses the OS TLS stack (schannel on
# Windows, Secure Transport on macOS): no aws-lc-sys C build, no extra disk.
reqwest = { version = "0.13", default-features = false, features = ["native-tls"] }
# select!/sleep to race a download against a cancel flag so a stalled URL fetch
# can be aborted promptly. tokio is already in the tree via tauri.
tokio = { version = "1", features = ["time", "macros"] }

